# tetra-codec

./: CMakeLists.txt  README.md  tetra-codec-impl.c  tetra-codec-impl.h  tetra-codec.c  tetra-codec.h  tetra-codec.pc
vcpkg/: CONTROL  make-pkg.sh  portfile.cmake
